--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -37,7 +37,205 @@
     <title>Account Login</title>
   </head>
   <body>
-    <div style="height: 90px"></div>
+    <div id="mini-head" class="d-lg-none d-flex">
+      <div class="container">
+        <div class="row">
+          <div class="burger-search d-flex col-3">
+            <div class="open-nav">
+              <div class="top">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+              <div class="bottom">
+                <div class="accordion">
+                  <div class="steps">
+                    <div class="step-1 step-item">
+                      <div class="sect" id="sect-1">
+                        <span>Drone</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                      </div>
+                      <div class="sect-down">
+                        <div class="nav-accordion">
+                          <div class="steps">
+                            <div class="sect">
+                              <span><a href="">Indoor</a></span>
+                              <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                            <div class="sect">
+                              <span><a href="">Kids Entertainment</a></span>
+                              <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                            <div class="sect">
+                              <span><a href="">Photography</a></span>
+                              <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="step-2 step-item">
+                      <div class="sect" id="sect-2">
+                        <span>Accesories</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                      </div>
+                      <div class="sect-down">
+                        <div class="nav-accordion">
+                          <div class="steps">
+                            <div class="sect">
+                              <span><a href="">Ryze Tello</a></span>
+                              <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                            <div class="sect">
+                              <span><a href="">Force 1 Scoot LED</a></span>
+                              <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="nav-item">
+                  <span>Collection</span>
+                </div>
+                <div class="nav-item">
+                  <span>Components</span>
+                </div>
+                <div class="nav-item">
+                  <span>Outfits</span>
+                </div>
+              </div>
+            </div>
+            <div class="nav-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                <symbol id="menu" viewBox="0 0 750 750"><title>menu</title>
+                    <path d="M12.03,84.212h360.909c6.641,0,12.03-5.39,12.03-12.03c0-6.641-5.39-12.03-12.03-12.03H12.03
+                    C5.39,60.152,0,65.541,0,72.182C0,78.823,5.39,84.212,12.03,84.212z"></path>
+                    <path d="M372.939,180.455H12.03c-6.641,0-12.03,5.39-12.03,12.03s5.39,12.03,12.03,12.03h360.909c6.641,0,12.03-5.39,12.03-12.03
+                        S379.58,180.455,372.939,180.455z"></path>
+                    <path d="M372.939,300.758H12.03c-6.641,0-12.03,5.39-12.03,12.03c0,6.641,5.39,12.03,12.03,12.03h360.909
+                    c6.641,0,12.03-5.39,12.03-12.03C384.97,306.147,379.58,300.758,372.939,300.758z"></path>
+                </symbol>
+              </svg>
+              <svg class="icon" viewBox="0 0 30 30"><use xlink:href="#menu" x="22%" y="25%"></use></svg>
+            </div>
+            <div class="search m">
+              <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">   
+                <symbol id="magnifying-desktop" viewBox="0 0 1200 1200"><title>magnifying-desktop</title>
+                  <path d="M606.209,578.714L448.198,423.228C489.576,378.272,515,318.817,515,253.393C514.98,113.439,399.704,0,257.493,0
+                   C115.282,0,0.006,113.439,0.006,253.393s115.276,253.393,257.487,253.393c61.445,0,117.801-21.253,162.068-56.586
+                   l158.624,156.099c7.729,7.614,20.277,7.614,28.006,0C613.938,598.686,613.938,586.328,606.209,578.714z M257.493,467.8
+                   c-120.326,0-217.869-95.993-217.869-214.407S137.167,38.986,257.493,38.986c120.327,0,217.869,95.993,217.869,214.407
+                   S377.82,467.8,257.493,467.8z"></path>
+                </symbol>
+              </svg>
+              <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#magnifying-desktop" x="18%" y="25%"></use></svg>
+              <input type="search" placeholder="Search">
+            </div>
+          </div>
+          <div class="logo col-6">
+            <img src="/assets/images/Logo.png" alt="">
+          </div>
+          <div class="login-cart d-flex col-3">
+            <div class="login">
+              <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">          
+                  <symbol id="user-desktop" viewBox="0 0 480 480"><title>user-desktop</title>
+                        <path d="M187.497,152.427H73.974c-38.111,0-69.117,31.006-69.117,69.117v39.928h251.758v-39.928
+                           C256.614,183.433,225.608,152.427,187.497,152.427z M241.614,246.473H19.856v-24.928c0-29.84,24.277-54.117,54.117-54.117h113.523
+                           c29.84,0,54.117,24.277,54.117,54.117L241.614,246.473L241.614,246.473z"></path>
+                        <path d="M130.735,145.326c40.066,0,72.663-32.597,72.663-72.663S170.802,0,130.735,0S58.072,32.596,58.072,72.663
+                           S90.669,145.326,130.735,145.326z M130.735,15c31.796,0,57.663,25.867,57.663,57.663s-25.867,57.663-57.663,57.663
+                           s-57.663-25.868-57.663-57.663S98.939,15,130.735,15z"></path>
+                      </symbol> 
+              </svg>
+                 <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#user-desktop" x="19%" y="23%"></use></svg>
+                <div class="mini-login-drop">
+                  <div class="login-register">
+                    <ul>
+                      <li><a href="../html/register.html">Register</a></li>
+                      <li><a href="../html/login.html">Login</a></li>
+                      <li><a href="../html/cart.html">Wish List (0)</a></li>
+                    </ul>
+                  </div>
+                  <div class="languages">
+                    <span>Language:</span>
+                    <ul>
+                      <li>
+                        <img src="/assets/images/home/languages/en-gb.png" alt="">
+                        <a href="">English</a>
+                      </li>
+                      <li>
+                        <img src="/assets/images/home/languages/ar.png" alt="">
+                        <a href="">English</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="currency">
+                    <span>Currency:</span>
+                    <ul>
+                      <li>
+                        <a href="">€ Euro</a>
+                      </li>
+                      <li>
+                        <a href="">£ Pound Sterling</a>
+                      </li>
+                      <li>
+                        <a href="">$ US Dollar</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+            <div class="mini-cart-drop">
+              <div class="top">
+                <span>CART</span>
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+              <div class="mid">
+                <ul class="mini-basket-list">
+                  <li><span>Your shopping cart is empty!</span></li>
+                </ul>
+              </div>
+              <div class="bottom">
+                <ul>
+                  <li>
+                    <span>Sub-Total</span><span class="sub-total">0<span>$</span></span>
+                  </li>
+                  <li>
+                    <span>Eco Tax (-2.00)</span><span class="eco-tax">0<span>$</span></span>
+                  </li>
+                  <li>
+                    <span>VAT (20%)</span><span class="vat">0<span>$</span></span>
+                  </li>
+                  <li>
+                    <span>Total</span><span class="total">0<span>$</span></span>
+                  </li>
+                </ul>
+                <div class="buttons">
+                  <button><a href="/assets/html/cart.html">VIEW CART</a></button>
+                  <button>CHECKOUT</button>
+                </div>
+              </div>
+            </div>
+            <div class="cart">
+              <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">          
+                <symbol id="cart1" viewBox="0 0 510 510"><title>cart</title>
+                        <path d="M306.4,313.2l-24-223.6c-0.4-3.6-3.6-6.4-7.2-6.4h-44.4V69.6c0-38.4-31.2-69.6-69.6-69.6c-38.4,0-69.6,31.2-69.6,69.6
+                  v13.6H46c-3.6,0-6.8,2.8-7.2,6.4l-24,223.6c-0.4,2,0.4,4,1.6,5.6c1.2,1.6,3.2,2.4,5.2,2.4h278c2,0,4-0.8,5.2-2.4
+                  C306,317.2,306.8,315.2,306.4,313.2z M223.6,123.6c3.6,0,6.4,2.8,6.4,6.4c0,3.6-2.8,6.4-6.4,6.4c-3.6,0-6.4-2.8-6.4-6.4
+                  C217.2,126.4,220,123.6,223.6,123.6z M106,69.6c0-30.4,24.8-55.2,55.2-55.2c30.4,0,55.2,24.8,55.2,55.2v13.6H106V69.6z
+                   M98.8,123.6c3.6,0,6.4,2.8,6.4,6.4c0,3.6-2.8,6.4-6.4,6.4c-3.6,0-6.4-2.8-6.4-6.4C92.4,126.4,95.2,123.6,98.8,123.6z M30,306.4
+                  L52.4,97.2h39.2v13.2c-8,2.8-13.6,10.4-13.6,19.2c0,11.2,9.2,20.4,20.4,20.4c11.2,0,20.4-9.2,20.4-20.4c0-8.8-5.6-16.4-13.6-19.2
+                  V97.2h110.4v13.2c-8,2.8-13.6,10.4-13.6,19.2c0,11.2,9.2,20.4,20.4,20.4c11.2,0,20.4-9.2,20.4-20.4c0-8.8-5.6-16.4-13.6-19.2V97.2
+                  H270l22.4,209.2H30z"></path>
+                </symbol> 
+              </svg>
+              <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="go-home-head"></div>
     <header id="lg-head" class="d-lg-flex d-none animate__animated porduct-page">
       <div class="container">
         <div class="row" style="width: 100%">
@@ -230,6 +428,7 @@
               </div>
             </div>
             <div class="cart">
+              <div class="wrap" style=" display: none;transition: 0.5s;position: fixed; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.7); width: 100%; height: 100vh;"></div>
               <div class="cart-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                   <symbol id="shopping-cart" viewBox="0 0 700 700">
@@ -248,7 +447,7 @@
                 <svg class="icon" viewBox="0 0 40 40">
                   <use xlink:href="#shopping-cart" x="12%" y="16%"></use>
                 </svg>
-                <sup>0</sup>
+                <sup class="product-count">0</sup>
               </div>
               <div class="cart-drop">
                 <div
@@ -273,23 +472,23 @@
                   </div>
                 </div>
                 <div class="cd-mid">
-                  <ul>
-                    <li>Your shopping cart is empty</li>
+                  <ul class="basket-list">
+                    <li class="when-empty-cart">Your shopping cart is empty</li>
                   </ul>
                 </div>
                 <div class="cd-btm">
                   <ul>
                     <li>
-                      <span>Sub-Total</span><span>0<span>$</span></span>
+                      <span>Sub-Total</span><span class="sub-total">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Eco Tax (-2.00)</span><span>0<span>$</span></span>
+                      <span>Eco Tax (-2.00)</span><span class="eco-tax">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>VAT (20%)</span><span>0<span>$</span></span>
+                      <span>VAT (20%)</span><span class="vat">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Total</span><span>0<span>$</span></span>
+                      <span>Total</span><span class="total">0<span>$</span></span>
                     </li>
                   </ul>
                   <div class="buttons">
@@ -749,7 +948,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/owl.carousel.js"></script>
-    <script src="../js/slick.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/footer.js"></script>
     <script src="../js/sm-header.js"></script>
