last page for responsive

--- a/assets/html/cart.html
+++ b/assets/html/cart.html
@@ -230,6 +230,7 @@
                 </symbol> 
               </svg>
               <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
+              <sup>0</sup>
             </div>
           </div>
         </div>
@@ -504,7 +505,8 @@
             </button>
           </div>
         </div>
-        <table class="cart-table" style="width: 100%;">
+        <div class="table">
+          <table class="cart-table">
           <thead>
             <tr>
               <th style="text-align: center">IMAGE</th>
@@ -517,6 +519,7 @@
           </thead>
           <tbody></tbody>
         </table>
+        </div>
         <div class="to-do-next">
           <h6>What would you like to do next?</h6>
           <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
