--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -226,6 +226,7 @@
                 </symbol> 
               </svg>
               <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
+              <sup>0</sup>
             </div>
           </div>
         </div>
@@ -316,7 +317,7 @@
                   </div>
                 </li>
                 <li>
-                  <a href="">Collection</a>
+                  <a href="../html/category.html">Collection</a>
                 </li>
                 <li>
                   <a href="">Components</a>
