--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -230,6 +230,7 @@
                 </symbol> 
               </svg>
               <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
+              <sup>0</sup>
             </div>
           </div>
         </div>
