--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -231,6 +231,7 @@
               </symbol> 
             </svg>
             <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
+            <sup>0</sup>
           </div>
         </div>
       </div>
