--- a/assets/html/category.html
+++ b/assets/html/category.html
@@ -236,7 +236,7 @@
         </div>
       </div>
     </div>
-    <div style="height: 90px;"></div>
+    <div class="go-home-head"></div>
     <header id="lg-head" class="d-lg-flex d-none animate__animated">
       <div class="container">
         <div class="row" style="width: 100%">
@@ -449,7 +449,7 @@
                 </div>
                 <div class="cd-mid">
                   <ul class="basket-list">
-                    <li class="when-empty">Your shopping cart is empty</li>
+                    <li class="when-empty-cart">Your shopping cart is empty</li>
                   </ul>
                 </div>
                 <div class="cd-btm">
