--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -236,7 +236,7 @@
         </div>
       </div>
     </div>
-    <div style="height: 90px;"></div>
+    <div class="go-home-head"></div>
     <header id="lg-head" class="d-lg-flex d-none animate__animated porduct-page">
       <div class="container">
         <div class="row" style="width: 100%">
@@ -512,6 +512,10 @@
       <div class="container">
         <div class="row">
           <div class="photos">
+            <div class="mini-title">
+              <h6>HTC Touch HD</h6>
+              <span>$122.00</span>
+            </div>
             <div class="big-photo">
               <img src="/assets/images/products/pro-photo/12-1000x1000.jpg" alt="">
             </div>
