--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -418,7 +418,7 @@
               </div>
             </div>
             <div class="cart">
-              <!-- <div class="wrap" style="display: block; transition: all 0.5s ease 0s; position: fixed; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.7); width: 100%; height: 100vh;"></div> -->
+              <div class="wrap" style="display: none; transition: all 0.5s ease 0s; position: fixed; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.7); width: 100%; height: 100vh;"></div>
               <div class="cart-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                   <symbol id="shopping-cart" viewBox="0 0 700 700">
