--- a/assets/html/cart.html
+++ b/assets/html/cart.html
@@ -192,7 +192,7 @@
               </div>
               <div class="mid">
                 <ul class="mini-basket-list">
-                  <li><span>Your shopping cart is empty!</span></li>
+                  <li><span class="when-empty-cart">Your shopping cart is empty!</span></li>
                 </ul>
               </div>
               <div class="bottom">
@@ -230,13 +230,13 @@
                 </symbol> 
               </svg>
               <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
-              <sup>0</sup>
+              <sup class="product-count">0</sup>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div style="height: 90px;"></div>
+    <div class="go-home-head"></div>
     <header id="lg-head" class="d-lg-flex d-none animate__animated">
       <div class="container">
         <div class="row" style="width: 100%">
