--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -188,7 +188,7 @@
               </div>
               <div class="mid">
                 <ul class="mini-basket-list">
-                  <li><span>Your shopping cart is empty!</span></li>
+                  <li><span class="when-empty-cart">Your shopping cart is empty!</span></li>
                 </ul>
               </div>
               <div class="bottom">
@@ -226,7 +226,7 @@
                 </symbol> 
               </svg>
               <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#cart1" x="17%" y="15%"></use></svg>
-              <sup>0</sup>
+              <sup class="product-count">0</sup>
             </div>
           </div>
         </div>
