--- a/assets/html/category.html
+++ b/assets/html/category.html
@@ -1279,5 +1279,6 @@
   })
   </script>
   <script src="../js/collection.js"></script>
+  <script src="../js/left-bar.js"></script>
 </body>
 </html>
