--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -953,5 +953,6 @@
     <script src="../js/footer.js"></script>
     <script src="../js/sm-header.js"></script>
     <script src="../js/basket.js"></script>
+    <script src="../js/left-bar.js"></script>
   </body>
 </html>
