--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -995,4 +995,5 @@
     <script src="../js/footer.js"></script>
     <script src="../js/sm-header.js"></script>
     <script src="../js/basket.js"></script>
+    <script src="../js/left-bar.js"></script>
 </body>
