--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="logo col-6">
-            <img src="/assets/images/Logo.png" alt="">
+            <a href="../html/home.html"><img src="../images/Logo.png" alt=""></a>
           </div>
           <div class="login-cart d-flex col-3">
             <div class="login">
@@ -160,11 +160,11 @@
                     <span>Language:</span>
                     <ul>
                       <li>
-                        <img src="/assets/images/home/languages/en-gb.png" alt="">
+                        <img src="../images/home/languages/en-gb.png" alt="">
                         <a href="">English</a>
                       </li>
                       <li>
-                        <img src="/assets/images/home/languages/ar.png" alt="">
+                        <img src="../images/home/languages/ar.png" alt="">
                         <a href="">English</a>
                       </li>
                     </ul>
@@ -211,7 +211,7 @@
                   </li>
                 </ul>
                 <div class="buttons">
-                  <button><a href="/assets/html/cart.html">VIEW CART</a></button>
+                  <button><a href="../html/cart.html">VIEW CART</a></button>
                   <button>CHECKOUT</button>
                 </div>
               </div>
@@ -241,8 +241,8 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <a href="/assets/html/home.html">
-              <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="../html/home.html">
+              <img src="../images/Logo.png" alt="logo" />
             </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
@@ -401,7 +401,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/en-gb.png"
+                          src="../images/home/languages/en-gb.png"
                           alt="eng"
                         />
                         <span>English</span>
@@ -410,7 +410,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/ar.png"
+                          src="../images/home/languages/ar.png"
                           alt="arab"
                         />
                         <span>Arabic</span>
@@ -506,19 +506,19 @@
     <section id="go-home">
       <div class="d-flex">
         <div class="home">
-          <a href="/assets/html/home.html" target="_blank">
+          <a href="../html/home.html" target="_blank">
             <i class="fa fa-home"></i>
           </a>
         </div>
         <div style="margin: 0 10px">|</div>
         <div>
-          <a href="/assets/html/product.html">
+          <a href="../html/product.html">
             <span>Acount</span>
           </a>
         </div>
         <div style="margin: 0 10px">|</div>
         <div>
-          <a href="/assets/html/product.html">
+          <a href="../html/product.html">
             <span>Login</span>
           </a>
         </div>
@@ -549,28 +549,28 @@
               </div>
               <div class="body">
                 <div class="products">
-                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <img src="../images/category/11-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Nano</h6>
                     <span>$122.00</span>
                   </div>
                   </div>
                 <div class="products">
-                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <img src="../images/category/12-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Shuffle</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <img src="../images/category/16-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HTC Touch HD</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <img src="../images/category/17-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HP LP3065</h6>
                     <span>$122.00</span>
@@ -584,7 +584,7 @@
               </div>
               <div class="body">
                 <div class="products">
-                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <img src="../images/category/11-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Nano</h6>
                     <span>$20.00</span>
@@ -592,7 +592,7 @@
                   </div>
                   </div>
                 <div class="products">
-                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <img src="../images/category/12-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Shuffle</h6>
                     <span>$38.00</span>
@@ -600,14 +600,14 @@
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <img src="../images/category/16-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HTC Touch HD</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <img src="../images/category/17-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HP LP3065</h6>
                     <span>$122.00</span>
@@ -621,7 +621,7 @@
               <h5>New Customer</h5>
               <h6>Register Account</h6>
               <p>By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.</p>
-              <button><a href="/assets/html/register.html">CONTINUE</a></button>
+              <button><a href="../html/register.html">CONTINUE</a></button>
             </div>
             <div class="returning-customer">
               <h5>Returning Customer</h5>
@@ -636,7 +636,7 @@
                   <input type="password" placeholder="Password">
                 </div>
                 <a href="">Forgotten Password</a>
-                <button><a href="/assets/html/register.html">LOGIN</a></button>
+                <button><a href="../html/register.html">LOGIN</a></button>
               </form>
             </div>
           </div>
@@ -916,19 +916,19 @@
             >
             <div class="pay-cards col-lg-6 col-sm-12">
               <img
-                src="/assets/images/home/payCards/american-express-44x30.png"
+                src="../images/home/payCards/american-express-44x30.png"
                 alt=""
               />
-              <img src="/assets/images/home/payCards/discover-44x30.png" alt="" />
+              <img src="../images/home/payCards/discover-44x30.png" alt="" />
               <img
-                src="/assets/images/home/payCards/google-wallet-44x30.png"
+                src="../images/home/payCards/google-wallet-44x30.png"
                 alt=""
               />
               <img
-                src="/assets/images/home/payCards/mastercard-44x30.png"
+                src="../images/home/payCards/mastercard-44x30.png"
                 alt=""
               />
-              <img src="/assets/images/home/payCards/paypal-44x30.png" alt="" />
+              <img src="../images/home/payCards/paypal-44x30.png" alt="" />
             </div>
           </div>
         </div>
