--- a/assets/html/category.html
+++ b/assets/html/category.html
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="logo col-6">
-            <img src="/assets/images/Logo.png" alt="">
+            <a href="../html/home.html"><img src="../images/Logo.png" alt=""></a>
           </div>
           <div class="login-cart d-flex col-3">
             <div class="login">
@@ -160,11 +160,11 @@
                     <span>Language:</span>
                     <ul>
                       <li>
-                        <img src="/assets/images/home/languages/en-gb.png" alt="">
+                        <img src="../images/home/languages/en-gb.png" alt="">
                         <a href="">English</a>
                       </li>
                       <li>
-                        <img src="/assets/images/home/languages/ar.png" alt="">
+                        <img src="../images/home/languages/ar.png" alt="">
                         <a href="">English</a>
                       </li>
                     </ul>
@@ -211,7 +211,7 @@
                   </li>
                 </ul>
                 <div class="buttons">
-                  <button><a href="/assets/html/cart.html">VIEW CART</a></button>
+                  <button><a href="../html/cart.html">VIEW CART</a></button>
                   <button>CHECKOUT</button>
                 </div>
               </div>
@@ -241,8 +241,8 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <a href="/assets/html/home.html">
-              <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="../html/home.html">
+              <img src="../images/Logo.png" alt="logo" />
             </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
@@ -389,7 +389,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/en-gb.png"
+                          src="../images/home/languages/en-gb.png"
                           alt="eng"
                         />
                         <span>English</span>
@@ -398,7 +398,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/ar.png"
+                          src="../images/home/languages/ar.png"
                           alt="arab"
                         />
                         <span>Arabic</span>
@@ -468,7 +468,7 @@
                     </li>
                   </ul>
                   <div class="buttons">
-                    <button><a href="/assets/html/cart.html">VIEW CART</a></button>
+                    <button><a href="../html/cart.html">VIEW CART</a></button>
                     <button>CHECKOUT</button>
                   </div>
                 </div>
@@ -481,13 +481,13 @@
     <section id="go-home">
         <div class="d-flex">
           <div class="home">
-            <a href="/assets/html/home.html" target="_blank">
+            <a href="../html/home.html" target="_blank">
               <i class="fa fa-home"></i>
             </a>
           </div>
           <div style="margin: 0 10px;">|</div>
           <div>
-            <a href="/assets/html/product.html">
+            <a href="../html/product.html">
               <span>Collection</span>
             </a>
           </div>
@@ -577,28 +577,28 @@
               </div>
               <div class="body">
                 <div class="products">
-                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <img src="../images/category/11-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Nano</h6>
                     <span>$122.00</span>
                   </div>
                   </div>
                 <div class="products">
-                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <img src="../images/category/12-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Shuffle</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <img src="../images/category/16-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HTC Touch HD</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <img src="../images/category/17-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HP LP3065</h6>
                     <span>$122.00</span>
@@ -612,7 +612,7 @@
               </div>
               <div class="body">
                 <div class="products">
-                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <img src="../images/category/11-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Nano</h6>
                     <span>$20.00</span>
@@ -620,7 +620,7 @@
                   </div>
                   </div>
                 <div class="products">
-                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <img src="../images/category/12-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>iPod Shuffle</h6>
                     <span>$38.00</span>
@@ -628,14 +628,14 @@
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <img src="../images/category/16-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HTC Touch HD</h6>
                     <span>$122.00</span>
                   </div>
                 </div>
                 <div class="products">
-                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <img src="../images/category/17-85x85.jpg" alt="">
                   <div class="product-detail">
                     <h6>HP LP3065</h6>
                     <span>$122.00</span>
@@ -694,9 +694,9 @@
               <div class="row">
                 <div class="prdct grid" data-id="1">
                   <div class="image">
-                    <a href="/assets/html/product.html" target="_blank">
-                      <img src="/assets/images/home/products/appleCinema30/1-370x370.jpg" alt="">
-                      <img src="/assets/images/home/products/appleCinema30/10-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                    <a href="../html/product.html" target="_blank">
+                      <img src="../images/home/products/appleCinema30/1-370x370.jpg" alt="">
+                      <img src="../images/home/products/appleCinema30/10-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                     </a>
                     <div class="rate">
                       <i class="bi bi-star-fill" style="color: gold;"></i>
@@ -707,7 +707,7 @@
                     </div>
                     <div class="wish-view">
                       <div class="view">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="quickview" viewBox="0 0 1050 1050"><title>quickview</title>
                               <path d="M505.918,236.117c-26.651-43.587-62.485-78.609-107.497-105.065c-45.015-26.457-92.549-39.687-142.608-39.687
@@ -730,7 +730,7 @@
                         </a>
                       </div>
                       <div class="wish">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="wishlist-outline" viewBox="0 0 1200 1200"><title>wishlist-outline</title>
                               <path d="M511.825,170.191c-0.14-1.786-0.298-3.155-0.44-4.095C504.22,84.955,444.691,20.73,367.434,20.73
@@ -765,9 +765,9 @@
                 </div>
                 <div class="prdct grid" data-id="2">
                   <div class="image">
-                    <a href="/assets/html/product.html" target="_blank">
-                      <img src="/assets/images/home/products/CanonEos/10-370x370.jpg" alt="">
-                      <img src="/assets/images/home/products/CanonEos/11-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                    <a href="../html/product.html" target="_blank">
+                      <img src="../images/home/products/CanonEos/10-370x370.jpg" alt="">
+                      <img src="../images/home/products/CanonEos/11-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                     </a>
                     <div class="rate">
                       <i class="bi bi-star-fill" style="color: gold;"></i>
@@ -778,7 +778,7 @@
                     </div>
                     <div class="wish-view">
                       <div class="view">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="quickview" viewBox="0 0 1050 1050"><title>quickview</title>
                               <path d="M505.918,236.117c-26.651-43.587-62.485-78.609-107.497-105.065c-45.015-26.457-92.549-39.687-142.608-39.687
@@ -801,7 +801,7 @@
                         </a>
                       </div>
                       <div class="wish">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="wishlist-outline" viewBox="0 0 1200 1200"><title>wishlist-outline</title>
                               <path d="M511.825,170.191c-0.14-1.786-0.298-3.155-0.44-4.095C504.22,84.955,444.691,20.73,367.434,20.73
@@ -836,9 +836,9 @@
                 </div>
                 <div class="prdct grid" data-id="3">
                   <div class="image">
-                    <a href="/assets/html/product.html" target="_blank">
-                      <img src="/assets/images/home/products/HTCtouchHD/12-370x370.jpg" alt="">
-                      <img src="/assets/images/home/products/HTCtouchHD/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                    <a href="../html/product.html" target="_blank">
+                      <img src="../images/home/products/HTCtouchHD/12-370x370.jpg" alt="">
+                      <img src="../images/home/products/HTCtouchHD/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                     </a>
                     <div class="rate">
                       <i class="bi bi-star-fill" style="color: gold;"></i>
@@ -849,7 +849,7 @@
                     </div>
                     <div class="wish-view">
                       <div class="view">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="quickview" viewBox="0 0 1050 1050"><title>quickview</title>
                               <path d="M505.918,236.117c-26.651-43.587-62.485-78.609-107.497-105.065c-45.015-26.457-92.549-39.687-142.608-39.687
@@ -872,7 +872,7 @@
                         </a>
                       </div>
                       <div class="wish">
-                        <a href="/assets/html/product.html">
+                        <a href="../html/product.html">
                           <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="wishlist-outline" viewBox="0 0 1200 1200"><title>wishlist-outline</title>
                               <path d="M511.825,170.191c-0.14-1.786-0.298-3.155-0.44-4.095C504.22,84.955,444.691,20.73,367.434,20.73
@@ -1228,22 +1228,22 @@
             >
             <div class="pay-cards col-lg-6 col-sm-12">
               <img
-                src="/assets/images/home/payCards/american-express-44x30.png"
+                src="../images/home/payCards/american-express-44x30.png"
                 alt=""
               />
               <img
-                src="/assets/images/home/payCards/discover-44x30.png"
+                src="../images/home/payCards/discover-44x30.png"
                 alt=""
               />
               <img
-                src="/assets/images/home/payCards/google-wallet-44x30.png"
+                src="../images/home/payCards/google-wallet-44x30.png"
                 alt=""
               />
               <img
-                src="/assets/images/home/payCards/mastercard-44x30.png"
+                src="../images/home/payCards/mastercard-44x30.png"
                 alt=""
               />
-              <img src="/assets/images/home/payCards/paypal-44x30.png" alt="" />
+              <img src="../images/home/payCards/paypal-44x30.png" alt="" />
             </div>
           </div>
         </div>
