--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="logo col-6">
-          <img src="/assets/images/Logo.png" alt="">
+          <a href="../html/home.html"><img src="../images/Logo.png" alt=""></a>
         </div>
         <div class="login-cart d-flex col-3">
           <div class="login">
@@ -161,11 +161,11 @@
                   <span>Language:</span>
                   <ul>
                     <li>
-                      <img src="/assets/images/home/languages/en-gb.png" alt="">
+                      <img src="../images/home/languages/en-gb.png" alt="">
                       <a href="">English</a>
                     </li>
                     <li>
-                      <img src="/assets/images/home/languages/ar.png" alt="">
+                      <img src="../images/home/languages/ar.png" alt="">
                       <a href="">English</a>
                     </li>
                   </ul>
@@ -212,7 +212,7 @@
                 </li>
               </ul>
               <div class="buttons">
-                <button><a href="/assets/html/cart.html">VIEW CART</a></button>
+                <button><a href="../html/cart.html">VIEW CART</a></button>
                 <button>CHECKOUT</button>
               </div>
             </div>
@@ -242,8 +242,8 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <a href="/assets/html/home.html">
-              <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="../html/home.html">
+              <img src="../images/Logo.png" alt="logo" />
             </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
@@ -390,7 +390,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/en-gb.png"
+                          src="../images/home/languages/en-gb.png"
                           alt="eng"
                         />
                         <span>English</span>
@@ -399,7 +399,7 @@
                     <li>
                       <a href="" class="d-flex">
                         <img
-                          src="/assets/images/home/languages/ar.png"
+                          src="../images/home/languages/ar.png"
                           alt="arab"
                         />
                         <span>Arabic</span>
@@ -482,19 +482,19 @@
     <section id="go-home">
         <div class="d-flex">
           <div class="home">
-            <a href="/assets/html/home.html" target="_blank">
+            <a href="../html/home.html" target="_blank">
               <i class="fa fa-home"></i>
             </a>
           </div>
           <div style="margin: 0 10px;">|</div>
           <div>
-            <a href="/assets/html/product.html">
+            <a href="../html/product.html">
               <span>Acount</span>
             </a>
           </div>
           <div style="margin: 0 10px;">|</div>
           <div>
-            <a href="/assets/html/product.html">
+            <a href="../html/product.html">
               <span>Register</span>
             </a>
           </div>
@@ -525,28 +525,28 @@
                 </div>
                 <div class="body">
                   <div class="products">
-                    <img src="/assets/images/category/11-85x85.jpg" alt="">
+                    <img src="../images/category/11-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>iPod Nano</h6>
                       <span>$122.00</span>
                     </div>
                     </div>
                   <div class="products">
-                    <img src="/assets/images/category/12-85x85.jpg" alt="">
+                    <img src="../images/category/12-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>iPod Shuffle</h6>
                       <span>$122.00</span>
                     </div>
                   </div>
                   <div class="products">
-                    <img src="/assets/images/category/16-85x85.jpg" alt="">
+                    <img src="../images/category/16-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>HTC Touch HD</h6>
                       <span>$122.00</span>
                     </div>
                   </div>
                   <div class="products">
-                    <img src="/assets/images/category/17-85x85.jpg" alt="">
+                    <img src="../images/category/17-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>HP LP3065</h6>
                       <span>$122.00</span>
@@ -560,7 +560,7 @@
                 </div>
                 <div class="body">
                   <div class="products">
-                    <img src="/assets/images/category/11-85x85.jpg" alt="">
+                    <img src="../images/category/11-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>iPod Nano</h6>
                       <span>$20.00</span>
@@ -568,7 +568,7 @@
                     </div>
                     </div>
                   <div class="products">
-                    <img src="/assets/images/category/12-85x85.jpg" alt="">
+                    <img src="../images/category/12-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>iPod Shuffle</h6>
                       <span>$38.00</span>
@@ -576,14 +576,14 @@
                     </div>
                   </div>
                   <div class="products">
-                    <img src="/assets/images/category/16-85x85.jpg" alt="">
+                    <img src="../images/category/16-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>HTC Touch HD</h6>
                       <span>$122.00</span>
                     </div>
                   </div>
                   <div class="products">
-                    <img src="/assets/images/category/17-85x85.jpg" alt="">
+                    <img src="../images/category/17-85x85.jpg" alt="">
                     <div class="product-detail">
                       <h6>HP LP3065</h6>
                       <span>$122.00</span>
@@ -956,22 +956,22 @@
               >
               <div class="pay-cards col-lg-6 col-sm-12">
                 <img
-                  src="/assets/images/home/payCards/american-express-44x30.png"
+                  src="../images/home/payCards/american-express-44x30.png"
                   alt=""
                 />
                 <img
-                  src="/assets/images/home/payCards/discover-44x30.png"
+                  src="../images/home/payCards/discover-44x30.png"
                   alt=""
                 />
                 <img
-                  src="/assets/images/home/payCards/google-wallet-44x30.png"
+                  src="../images/home/payCards/google-wallet-44x30.png"
                   alt=""
                 />
                 <img
-                  src="/assets/images/home/payCards/mastercard-44x30.png"
+                  src="../images/home/payCards/mastercard-44x30.png"
                   alt=""
                 />
-                <img src="/assets/images/home/payCards/paypal-44x30.png" alt="" />
+                <img src="../images/home/payCards/paypal-44x30.png" alt="" />
               </div>
             </div>
           </div>
