--- a/assets/html/cart.html
+++ b/assets/html/cart.html
@@ -526,7 +526,7 @@
           <div class="accordion-total">
             <div class="accordion">
               <div class="step-item" id="step-1">
-                <div class="step-top">Use Coupen Code</div>
+                <div class="step-top">Use Coupen Code<i class="fa-solid fa-chevron-up"></i></div>
                 <div class="step-bottom">
                   <p>Enter your coupon here</p>
                   <div class="apply">
@@ -536,7 +536,7 @@
                 </div>
               </div>
               <div class="step-item" id="step-2">
-                <div class="step-top">Estimate Shipping & Taxes</div>
+                <div class="step-top">Estimate Shipping & Taxes<i class="fa-solid fa-chevron-up"></i></div>
                 <div class="step-bottom">
                   <p>Enter your destination to get a shipping estimate.</p>
                   <div class="get-quotes">
@@ -561,7 +561,7 @@
                 </div>
               </div>
               <div class="step-item" id="step-3">
-                <div class="step-top">Use Gift Certificate</div>
+                <div class="step-top">Use Gift Certificate<i class="fa-solid fa-chevron-up"></i></div>
                 <div class="step-bottom">
                   <p>Enter your gift certificate code here</p>
                   <div class="apply">
