--- a/assets/html/category.html
+++ b/assets/html/category.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="icon" href="../images/cart.png" />
-    <title>Category</title>
+    <title>Collection</title>
   </head>
   <body>
     <div id="mini-head" class="d-lg-none d-flex">
@@ -499,7 +499,7 @@
           <div class="left-bar">
             <div class="categories">
               <div class="head">
-                <h5>CATEGORIES</h5>
+                <h5>CATEGORIES<i class="fa-solid fa-chevron-up"></i></h5>
               </div>
               <div class="body">
                 <ul>
@@ -514,7 +514,7 @@
             </div>
             <div class="refine-search">
               <div class="head">
-                <h5>REFINE SEARCH</h5>
+                <h5>REFINE SEARCH<i class="fa-solid fa-chevron-up"></i></h5>
               </div>
               <div class="body">
                 <div class="list">
@@ -573,7 +573,7 @@
             </div>
             <div class="bestsellers">
               <div class="head">
-                <h5>CATEGORIES</h5>
+                <h5>BESTSELLERS<i class="fa-solid fa-chevron-up"></i></h5>
               </div>
               <div class="body">
                 <div class="products">
@@ -608,7 +608,7 @@
             </div>
             <div class="latest-products">
               <div class="head">
-                <h5>LATEST PRODUCTS</h5>
+                <h5>LATEST PRODUCTS<i class="fa-solid fa-chevron-up"></i></h5>
               </div>
               <div class="body">
                 <div class="products">
