--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -506,7 +506,7 @@
             <div class="left-bar">
               <div class="categories">
                 <div class="head">
-                  <h5>CATEGORIES</h5>
+                  <h5>CATEGORIES<i class="fa-solid fa-chevron-up"></i></h5>
                 </div>
                 <div class="body">
                   <ul>
@@ -521,7 +521,7 @@
               </div>
               <div class="bestsellers">
                 <div class="head">
-                  <h5>CATEGORIES</h5>
+                  <h5>BESTSELLERS<i class="fa-solid fa-chevron-up"></i></h5>
                 </div>
                 <div class="body">
                   <div class="products">
@@ -556,7 +556,7 @@
               </div>
               <div class="latest-products">
                 <div class="head">
-                  <h5>LATEST PRODUCTS</h5>
+                  <h5>LATEST PRODUCTS<i class="fa-solid fa-chevron-up"></i></h5>
                 </div>
                 <div class="body">
                   <div class="products">
